Ensure covers fit in the front page

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -11,6 +11,15 @@ footer {
     padding: 10px;
 }
 
+.table-front {
+    max-width: 300px;
+}
+
+.table-front img {
+    max-width:100%;
+    height:auto;
+}
+
 #tags > ul {
     list-style-type: none;
 }
